[FIX] sap.m.List: IE9 truncation handling for the content.
BCP: 1580018351

--- a/src/sap.m/src/sap/m/themes/sap_hcb/List_noFlex.less
+++ b/src/sap.m/src/sap/m/themes/sap_hcb/List_noFlex.less
@@ -4,6 +4,7 @@
 li.sapMLIB.sapMLIBNoFlex{
 	width: 100%;
 	display: table;
+	table-layout:fixed;
 	border-collapse: collapse;
 	padding: 0; /* reset padding settings of the normal list */
 }
@@ -212,3 +213,6 @@ html[data-sap-ui-browser*='ie9'] .sapMListNoData {
 	}
 }
 
+.sapMLIBContentNF + .sapMLIBType{
+	display: table-cell;
+} 
